Add Hard-Coded Functionalities: push button and images are working event listeners, Add HTML content + CSS Styling

--- a/Mar-2-23/Dog CEO 4/index.html
+++ b/Mar-2-23/Dog CEO 4/index.html
@@ -5,12 +5,52 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dog CEO 4</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
+
+    <div class="header">
+        <h1>Welcome to Doggy Detect</h1>
+        <hr size="3" width="100%" color="black">
+
+    </div>
+
+    <div class="image-container" id="image-container">
+        <div class="ic-flex" id="ic-flex-1">
+            <img id="dog-image-1" src="" alt="Image of Dog" onerror="this.style.display='none'"/>
+        </div>
+
+        <div class="ic-flex" id="ic-flex-2">
+            <img id="dog-image-2" src="" alt="Image of Dog" onerror="this.style.display='none'">
+        </div>
+
+        <div class="ic-flex" id="ic-flex-3">
+            <img id="dog-image-3" src="" alt="Image of Dog" onerror="this.style.display='none'">
+        </div>
+
+        <div class="ic-flex" id="ic-flex-4" >
+            <img id="dog-image-4" src="" alt="Image of Dog" onerror="this.style.display='none'">
+        </div>
+    </div>
     
+    <div class="button-container" id="button-container">
+        <button class="button" id="button">Push Me</button>
+        <!-- <p>Push the button to draw cards</p> -->
+    </div>
 
 
     <script src="./main.js"></script>
 </body>
 </html>
+
+
+
+<!-- These are my hard-coded images -->
+
+<!-- https://images.dog.ceo/breeds/frise-bichon/3.jpg -->
+
+<!-- https://images.dog.ceo/breeds/sheepdog-shetland/n02105855_10608.jpg -->
+
+<!-- https://images.dog.ceo/breeds/beagle/n02088364_2572.jpg -->
+
+<!-- "https://images.dog.ceo/breeds/sheepdog-english/n02105641_9319.jpg" -->
