--- a/Mar-2-23/Dog CEO 4/index.html
+++ b/Mar-2-23/Dog CEO 4/index.html
@@ -12,7 +12,22 @@
     <div class="header">
         <h1>Welcome to Doggy Detect</h1>
         <hr size="3" width="100%" color="black">
+    </div>
 
+    <div class="instructions-container">
+        <h3>Guess the correct breed to keep playing.</h3>
+        <!-- <h4>Rules:</h4> -->
+        <ul>
+            <li>You start off with 15 points. </li>
+            <li>Correct on first try = +3 points </li>
+            <li>Correct on second try =  +2 points</li>
+            <li>Correct on third try = 1 point</li>
+            <li>Correct on your fourth try = -5 points.</li>
+        </ul>
+    </div>
+
+    <div class="score-container" id="score-container">
+        <h1 id="score">15</h1>
     </div>
 
     <div class="image-container" id="image-container">
@@ -25,14 +40,14 @@
         </div>
 
         <div class="ic-flex" id="ic-flex-3">
-            <img id="dog-image-3" src="" alt="Image of Dog" onerror="this.style.display='none'">
+            <img id="dog-image-3" src="" alt="Image of Dog" onerror="this.style.display='none'" data-correct="true">
         </div>
 
         <div class="ic-flex" id="ic-flex-4" >
             <img id="dog-image-4" src="" alt="Image of Dog" onerror="this.style.display='none'">
         </div>
     </div>
-    
+
     <div class="button-container" id="button-container">
         <button class="button" id="button">Push Me</button>
         <!-- <p>Push the button to draw cards</p> -->
