--- a/Mar-2-23/Dog CEO 4/index.html
+++ b/Mar-2-23/Dog CEO 4/index.html
@@ -48,6 +48,11 @@
         </div>
     </div>
 
+    <div class="messages-container" id="messages-container">
+        <h3 class="prompt" id="prompt">Select the "___________"</h3>
+        <h3 class="feedback" id="feedback"></h3>
+    </div>
+
     <div class="button-container" id="button-container">
         <button class="button" id="button">Push Me</button>
         <!-- <p>Push the button to draw cards</p> -->
