--- a/Feb-21-ex/Progress Tracker/index.html
+++ b/Feb-21-ex/Progress Tracker/index.html
@@ -9,11 +9,11 @@
 </head>
 <body>
     <div class="container">
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
+        <div id="i"></div>
+        <div id="ii"></div>
+        <div id='iii'></div>
+        <div id="iv"></div>
+        <div id="v"></div>
     </div>
 
     <div class="count" id="count">
